2004-09-17  Florian Boor  <florian.boor@kernelconcepts.de>
    
    * main.c, guitools.c: Added tools for fast directory access.
    * main.c: Removed some old cruft.
    * guitools.*: New files for additional GUI elements.
    * Makefile: Removed unused stuff, increased version number.

2004-09-07  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Removed obsolete code in button_clicked(), use open_with() now.
              Enables infoprints using the default application.

2004-09-06  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: More infoprints.

2004-09-04  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Added support for infoprints when starting external applications.
    * familiar/control1: Depends on libgpewidget 0.89 now.

2004-09-02  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Fixed broken button hints.
    * main.c: Added refresh button to compensate broken fs monitoring on 
              some platforms.

2004-09-01  Florian Boor  <florian.boor@kernelconcepts.de>

	* Released V 0.19.
    * main.c: Implemented directory monitoring for automatic refresh.
    * main.c: Some minor fixes and cleanups.
    * main.c: Changed click behaviour not to run an action on single click.
              Rewrote "open with" dialog.
    * Makefile: New version number.

2004-08-15  Florian Boor  <florian.boor@kernelconcepts.de>

	* Released V 0.18.
	* main.c: create_fMain() Fixed detections depending on screen size.
	* main.c: main() Added missing initialisations, fixed orders.

2004-08-09  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: ask_open_with() Changed button order.
    
2004-08-06  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Directory create dialog closes correcty on enter now.

2004-08-05  Florian Boor  <florian.boor@kernelconcepts.de>
    
	* gpe-filemanager.png: Replaced by icon that is used by gnome.

2004-07-27  Florian Boor  <florian.boor@kernelconcepts.de>
    